# oif-solvers

./: .gitignore  Cargo.toml  PROJECT.md  README.md  REFACTOR_PLAN.md  package-lock.json  package.json  run-solver-local.js  rustfmt.toml  tsconfig.json  unit-lcov.info
.github/: codecov.yml
.github/workflows/: ci.yaml
api-spec/: orders-api.yaml  tokens-api.yaml
config/: chains-local.json  demo.toml  example.toml  testnet.toml
config/demo/: api.toml  compact.env  networks.toml
config/testnet/: api.toml  networks.toml
crates/solver-account/: Cargo.toml
crates/solver-account/src/: lib.rs
crates/solver-account/src/implementations/: local.rs
crates/solver-config/: Cargo.toml
crates/solver-config/src/: lib.rs  loader.rs
crates/solver-config/src/builders/: config.rs  mod.rs
crates/solver-core/: Cargo.toml
crates/solver-core/src/: context.rs  eip712.rs  lib.rs  price.rs
crates/solver-core/src/builder/: mod.rs
crates/solver-core/src/engine/: context.rs  lifecycle.rs  mod.rs  token_manager.rs
crates/solver-core/src/handlers/: intent.rs  mod.rs  order.rs  settlement.rs  transaction.rs
crates/solver-core/src/monitoring/: mod.rs  settlement.rs  transaction.rs
crates/solver-core/src/recovery/: mod.rs
crates/solver-core/src/state/: mod.rs  order.rs
crates/solver-core/src/utils/: formatting.rs  mod.rs
crates/solver-delivery/: Cargo.toml
crates/solver-delivery/src/: lib.rs
crates/solver-discovery/: Cargo.toml
crates/solver-discovery/src/: lib.rs
crates/solver-discovery/src/implementations/offchain/: _7683.rs
crates/solver-discovery/src/implementations/onchain/: _7683.rs
crates/solver-order/: Cargo.toml
crates/solver-order/src/: lib.rs
crates/solver-order/src/implementations/standards/: _7683.rs
crates/solver-order/src/implementations/strategies/: simple.rs
crates/solver-order/src/quote/: custody_strategy.rs  generator.rs
crates/solver-order/src/signing/payloads/: permit2.rs
crates/solver-price/: Cargo.toml
crates/solver-price/src/: lib.rs
crates/solver-price/src/implementations/: mock.rs
crates/solver-service/: Cargo.toml
crates/solver-service/src/: factory_registry.rs  main.rs  server.rs
crates/solver-service/src/apis/: mod.rs  order.rs  quote.rs  tokens.rs
crates/solver-service/src/apis/quote/: capability.rs  custody.rs  eip712.rs  generation.rs  mod.rs  registry.rs  settlement.rs  validation.rs
crates/solver-service/src/apis/quote/cost/: engine.rs  mod.rs  tx_builders.rs
crates/solver-service/src/apis/quote/signing/: mod.rs
crates/solver-service/src/apis/quote/signing/payloads/: permit2.rs
crates/solver-settlement/: Cargo.toml
crates/solver-settlement/src/: lib.rs  utils.rs
crates/solver-settlement/src/implementations/: direct.rs
crates/solver-storage/: Cargo.toml
crates/solver-storage/src/: lib.rs
crates/solver-storage/src/implementations/: file.rs  memory.rs
crates/solver-types/: Cargo.toml
crates/solver-types/src/: account.rs  api.rs  delivery.rs  discovery.rs  erc7930.rs  events.rs  lib.rs  networks.rs  oracle.rs  order.rs  price.rs  registry.rs  secret_string.rs  storage.rs  validation.rs
crates/solver-types/src/standards/: eip7683.rs  eip7930.rs  mod.rs
crates/solver-types/src/utils/: constants.rs  conversion.rs  eip712.rs  eip712_utils.rs  formatting.rs  helpers.rs  mod.rs
other-project/: GenerateSignature.s.sol  step2-submit-order.sh
scripts/: test-destination-balances.sh  test-full-workflow.sh
scripts/demo/: batch_intents.sh  build_transaction.sh  debug_transaction.sh  send_offchain_intent.sh  send_offchain_resource_lock_intent.sh  send_onchain_intent.sh  send_quote_intent.sh  setup_local_anvil.sh  setup_testnet.sh  show_balances.sh  test_intents.json  test_price_feed_demo.sh  test_quote_api.sh
scripts/e2e/: batch_intents.sh  setup_testnet.sh  testnet_chains.json
src/: SolverServer.ts  index.ts
src/config/: ConfigLoader.ts  chains.ts  contracts.ts  solver.ts
src/contracts/: CoinFillerInterface.ts  ContractFactory.ts  OracleInterface.ts  SettlerCompactInterface.ts  TheCompactInterface.ts
src/events/: FillEventListener.ts  FinalizationEventListener.ts
src/models/: MandateOutput.ts  SolverState.ts  StandardOrder.ts
src/services/: CrossChainService.ts  EventService.ts  FinalizationService.ts  LiquidityService.ts  OrderMonitoringService.ts  SignatureService.ts
src/storage/: OrderStorage.ts  StateManager.ts
src/utils/: ChainUtils.ts  JsonUtils.ts  Logger.ts
(+1 files in other folders)
