[package]
name = "solver-config"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
solver-types = { path = "../solver-types" }
thiserror = "1.0"
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util"] }