[package]
name = "solver-discovery"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"

[dependencies]
alloy-contract = "0.8"
alloy-primitives = "0.8"
alloy-provider = { version = "0.8", features = ["ws"] }
alloy-pubsub = "0.8"
alloy-rpc-types = "0.8"
alloy-sol-types = "0.8"
async-trait = "0.1"
hex = "0.4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
toml = { workspace = true }
tracing = "0.1"
alloy-transport = "0.8"
alloy-transport-http = "0.8"
alloy-transport-ws = "0.8"
futures = "0.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
