[package]
name = "solver-price"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = { workspace = true }
tracing = "0.1"

# Internal dependencies
solver-types = { path = "../solver-types" }