[package]
name = "solver-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types" }
thiserror = "2.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
toml = { workspace = true }
tracing = { workspace = true }