[package]
name = "solver-types"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8", features = ["std", "serde"] }
alloy-rpc-types = { version = "0.8" }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }


